--- a/RestuApp/app/src/main/AndroidManifest.xml
+++ b/RestuApp/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RestuApp">
         <activity
+            android:name=".DishDetails"
+            android:exported="true" />
+        <activity
             android:name=".Menu"
             android:exported="true">
             <intent-filter>
